<resources>
    <string name="app_name">RxDemo</string>
    <string name="flowable">Flowable</string>
    <string name="just">Just</string>
    <string name="from">From</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="defer">Defer</string>
    <string name="never">Never</string>
    <string name="repeat">Repeat</string>
    <string name="range">Range</string>
    <string name="start">Start</string>
    <string name="from_iterable">From Iterable</string>
    <string name="from_array">From Array</string>
    <string name="from_action">From Action</string>
    <string name="from_runnable">From Runnable</string>
    <string name="hello">Hello!!!</string>
    <string name="timer">Timer</string>
    <string name="empty">Empty</string>
    <string name="next">Next</string>
    <string name="buffer">Buffer</string>
    <string name="nothing">Nothing</string>
    <string name="cast">Cast</string>
    <string name="concatmap">ConcatMap</string>
    <string name="flat_map">FlatMap</string>
    <string name="group_by">Group By</string>
    <string name="map">Map</string>
    <string name="scan">Scan</string>
    <string name="window">Window</string>
    <string name="check">Check</string>
    <string name="from_future">From Future</string>
    <string name="zip">Zip</string>
    <string name="merge">Merge</string>
    <string name="concat">Concat</string>
    <string name="switch_map">Switch Map</string>
    <string name="creatingob">Creating_Ob</string>
    <string name="filtering">Filtering</string>
    <string name="result">Result</string>
    <string name="debounce">Debounce</string>
    <string name="distinct">Distinct</string>
    <string name="element_at">Element At</string>
    <string name="filter">Filter</string>
    <string name="first">First</string>
    <string name="ignore_element">Ignore Element</string>
    <string name="sample">Sample</string>
    <string name="take">Take</string>
    <string name="timeout">TimeOut</string>
    <string name="doonerror">do_On_Error</string>
    <string name="handleerror">Handle_Error</string>
    <string name="on_error_complete">On Error Complete</string>
    <string name="generate">Generate</string>
    <string name="error_return_ex">Error Return</string>
    <string name="retry">Retry</string>
    <string name="on_error_resume">On Error Resume</string>
    <string name="scheduler">Scheduler</string>
    <string name="backpressure">Backpressure</string>
</resources>
