<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandleErrorActivity"
    >

    <Button
        android:id="@+id/btn_do_on_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/doonerror"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        />

    <Button
        android:id="@+id/btn_do_err_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/on_error_complete"
        app:layout_constraintStart_toEndOf="@+id/btn_do_on_error"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        />

    <Button
        android:id="@+id/btn_on_error_resume_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/on_error_resume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_do_err_complete"
        />

    <Button
        android:id="@+id/btn_on_error_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/error_return_ex"
        app:layout_constraintStart_toEndOf="@+id/btn_on_error_resume_next"
        app:layout_constraintTop_toBottomOf="@+id/btn_do_err_complete"
        />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_on_error_resume_next"
        />

    <Button
        android:id="@+id/btn_scheduler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backpressure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_scheduler2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scheduler2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_scheduler"
        />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/result"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
